--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lucide-react": "^0.548.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.4",
+    "autoprefixer": "^10.4.15",
     "postcss": "^8.4.32",
-    "autoprefixer": "^10.4.15"
+    "tailwindcss": "^3.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
