--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-sleep-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kiracu2024.github.io/my-sleep-app/",
   "dependencies": {
     "lucide-react": "^0.548.0",
     "react": "^18.3.0",
